# MFDNet

./: README.md  check_plain.py  convert.py  test.py  tmp_test.py  train.py
model/: Haar_trans.py  MFDB.py  MFDNet.py  Plaindn.py
ncnn-MFDNet/: CMakeLists.txt  build.sh  denoise-mfdnet.cc  mfdnet-sigma8-m3k3c16-opt.param
utils/: Rep_params.py  utils.py
weights/mfdnet_plain/: mfdnet_plain_sigma8.pt
